@@ -89,42 +89,67 @@
 
     \itemize{ 
         \item \code{which=1} to \code{3} (or \code{"u1"} to \code{"u3"})
+
         yield timeseries of the first, second, and third components of
         velocity (in beam, xyz or enu coordinates).
+
         \item \code{which=4} is not permitted (since ADV are 3-beam devices)
+
         \item \code{which=5} to \code{7} (or \code{"a1"} to \code{"a3"})
         yield timeseries of the amplitudes of beams 1 to 3.  (Note that
         the data are called \code{data$a[,1]}, \code{data$a[,2]} and
         \code{data$a[,3]}, for these three timeseries.)
+
         \item \code{which=8} is not permitted (since ADV are 3-beam devices)
+
         \item \code{which=9} to \code{11} (or \code{"q1"} to \code{"q3"})
         yield timeseries of correlation for beams 1 to 3.  (Note that the
         data are called \code{data$c[,1]}, \code{data$c[,2]} and
         \code{data$c[,3]}, for these three timeseries.)
+
         \item \code{which=12} is not permitted (since ADVs are 3-beam devices)
+
         \item \code{which=13} is not permitted (since ADVs do not measure salinity)
+
         \item \code{which=14} or \code{which="temperature"} yields a timeseries of temperature.
+
         \item \code{which=15} or \code{which="pressure"} yields a timeseries of pressure.
+
         \item \code{which=16} or \code{which="heading"} yields a timeseries of heading.
+
         \item \code{which=17} or \code{which="pitch"}yields a timeseries of pitch.
+
         \item \code{which=18} or \code{which="roll"}yields a timeseries of roll.
+
         \item \code{which=19} to \code{21} yields plots of correlation versus
         amplitude, for beams 1 through 3, using \code{\link{smoothScatter}}.
+
         \item \code{which=22} is not permitted (since ADVs are 3-beam devices)
+
         \item \code{which=23} or \code{"progressive vector"} yields a
         progressive-vector diagram in the horizontal plane, plotted with
         \code{asp=1}, and taking beam1 and beam2 as the eastward and
         northward components of velocity, respectively.
+
         \item \code{which=28} or \code{"uv"} yields velocity plot in the
         horizontal plane, i.e. u[2] versus u[1].  If the number of data
         points is small, a scattergraph is used, but if it is large,
         \code{\link{smoothScatter}} is used.
+
         \item \code{which=29} or \code{"uv+ellipse"} as the \code{"uv"}
         case, but with an added indication of the tidal ellipse,
         calculated from the eigen vectors of the covariance matrix.
+
         \item \code{which=30} or \code{"uv+ellipse+arrow"} as the
         \code{"uv+ellipse"} case, but with an added arrow indicating the
         mean current.
+
+        \item \code{which=50} or \code{"analog1"} plots a time series of the
+        analog1 signal, if there is one.
+
+        \item \code{which=51} or \code{"analog2"} plots a time series of the
+        analog2 signal, if there is one.
+
         \item \code{which=100} or \code{"voltage"} plots the voltage as a
         timeseries, if voltage exists in the dataset.
     }
