@@ -1,4 +1,5 @@
 0.4-1
+- read.adv.nortek(): handle extra analog data
 - add CTD accessors longitude(), latitude(), and time()
 
 0.3-1
